@@ -123,6 +123,8 @@
 <div id="rdf_link">
   <a href="[% cgi_url %]?id=[% node_param %];format=rdf">RDF/XML for this
   node</a>
+  <a href="[% cgi_url %]?id=[% node_param %];format=json">JSON for this
+  node</a>
   [% IF rss_locale_url %]
     / <a href="[% rss_locale_url %]">RSS feed for this locale</a>
   [% END %]
